refactor: update project name to VSol Software, enhance README, and improve database commands
- Changed project name from "relivator" to "vsol-e-commerce" in package.json and README.
- Updated README to reflect new branding and added Docker commands for database management.
- Enhanced SEO configuration in app.ts and added favicon support in layout.tsx.
- Modified payment service functions to include tenant ID for better data management.
- Updated CSS variables for improved theming consistency.
- Adjusted footer and header components to display new branding and removed unused imports.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "relivator",
-  "description": "Relivator is a robust eCommerce template built with Next.js. It's designed for developers who want a fast, modern, and scalable foundation without reinventing the backend.",
+  "name": "vsol-e-commerce",
+  "description": "VSol Software e-commerce platform built with Next.js. A modern, scalable e-commerce solution for VSol Software.",
   "version": "1.4.6",
   "type": "module",
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 8080",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:auth": "bun src/lib/auth-db.ts",
+    "db:start": "docker compose up -d postgres",
+    "db:stop": "docker compose stop postgres",
+    "db:down": "docker compose down",
+    "db:reset": "docker compose down -v && docker compose up -d postgres",
+    "db:logs": "docker compose logs -f postgres",
     "ui": "bunx --bun shadcn@latest add",
     "latest": "bun update --latest && bun check",
     "check": "tsc --noEmit && eslint --cache --fix . && biome check --fix --unsafe . && knip",
