chore: update configuration files and enhance README
- Added POLAR_SUCCESS_URL to .env.example for payment success redirection.
- Updated .dockerignore and docker-compose.yml for improved container management.
- Included @polar-sh/nextjs dependency in package.json.
- Cleaned up README for better installation and deployment instructions.
- Made minor adjustments to various files for consistency and clarity.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# 📖 https://docs.reliverse.org/relivator/env
+# https://docs.reliverse.org/relivator/env
 
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 # ―― APP ―――――――――――――――――――――――――――――――――――
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 
 # use https://example.com in production
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_SERVER_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL="http://localhost:8080"
+NEXT_SERVER_APP_URL="http://localhost:8080"
 
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 # ―― DATABASE ――――――――――――――――――――――――――――――
@@ -24,8 +24,8 @@ AUTH_SECRET="..."
 
 # https://console.cloud.google.com/apis/credentials
 # Create credentials > OAuth client ID
-# Authorized JavaScript origins: https://example.com && http://localhost:3000
-# Authorized redirect URIs: https://example.com/api/auth/callback/google && http://localhost:3000/api/auth/callback/google
+# Authorized JavaScript origins: https://example.com && http://localhost:8080
+# Authorized redirect URIs: https://example.com/api/auth/callback/google && http://localhost:8080/api/auth/callback/google
 AUTH_GOOGLE_ID="..."
 AUTH_GOOGLE_SECRET="..."
 
@@ -43,19 +43,30 @@ UPLOADTHING_TOKEN="..."
 UPLOADTHING_SECRET_KEY="sk_live_..."
 
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
-# ―― PAYMENTS ――――――――――――――――――――――――――――――
+# ―― PAYMENTS (STRIPE) ―――――――――――――――――――――
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 
-# https://polar.sh/
-POLAR_ACCESS_TOKEN="..."
-POLAR_WEBHOOK_SECRET="..."
-POLAR_ENVIRONMENT="production" # or "sandbox" for testing
+# https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY="sk_test_..."
+
+# https://dashboard.stripe.com/webhooks
+# Webhook endpoint: https://yourdomain.com/api/webhook/stripe
+# Events: customer.subscription.created, customer.subscription.updated,
+#         customer.subscription.deleted, checkout.session.completed
+STRIPE_WEBHOOK_SECRET="whsec_..."
+
+# https://dashboard.stripe.com/products
+# Create products and copy the price IDs
+STRIPE_PRICE_ID_PRO="price_..."
+STRIPE_PRICE_ID_PREMIUM="price_..."
 
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
-# ―― EMAILS ――――――――――――――――――――――――――――――――
+# ―― EMAILS (RESEND) ―――――――――――――――――――――――
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 
-# 🔜
+# https://resend.com/api-keys
+RESEND_API_KEY="re_..."
+RESEND_FROM_EMAIL="noreply@yourdomain.com"
 
 # ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 # ―― INSTRUCTIONS ――――――――――――――――――――――――――
