--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "start": "next start",
     "dev": "next dev --turbopack -p 8080",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "@polar-sh/better-auth": "^0.1.1",
+    "@polar-sh/nextjs": "^0.9.0",
     "@polar-sh/sdk": "^0.32.13",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.1",
